<resources>
    <string name="app_name">Sharefy</string>

    <string name="login">Giriş</string>
    <string name="register">Kayıt Ol</string>
    <string name="settings">Ayarlar</string>
    <string name="email">Email</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="login_1">Giriş Yap</string>
    <string name="confirm">Onayla</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="warning">Uyarı</string>
    <string name="ok">Tamam</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_menu_menu">Keşfet</string>
    <string name="bottom_nav_menu_my_adverts">İlanlarım</string>
    <string name="bottom_nav_manu_open_adverts">Mesajlarım</string>
    <string name="bottom_nav_menu_profile">Profil</string>
    <string name="new_advert_category">Tür</string>
    <string name="new_advert_title">Başlık</string>

    <string name="new_advert_extra_notes">Ek Notlar</string>
    <string name="new_advert_required_items">İhtiyaç Listesi</string>
    <string name="new_advert_required_items_detail">İhtiyaç listesi için giriş yapnızı istiyoruz. İhtiyaç olan malzemenin ismini ve adedini ilgili alanlara girdikten sonra ekle butonuna basınız.</string>
    <string name="new_advert_add">Onayla</string>
    <string name="new_advert_item_count">Malzeme adedi</string>
    <string name="new_advert_item_name">Malzeme ismi</string>

    <string name="validation_success" />
    <string name="validation_error_empty">Lütfen boş alanı doldurunuz.</string>
    <string name="validation_error_email">Lütfen uygun bir email adresi giriniz!</string>
    <string name="validation_error_necessary_items_count_missing">Giriş değeri gerekli malzeme adeti içermelidir. (ör. 10 kitap, 2 kazak)</string>
    <string name="validation_error_necessary_items_count">Lütfen geçerli bir sayı giriniz!</string>
    <string name="validation_error_necessary_items_empty">En az 1 adet malzeme girilmelidir.</string>
    <string name="item_necessary_item_sub1">İhtiyaç Adı</string>
    <string name="item_necessary_item_sub2">Adet</string>

    <string name="advert_detail_advert_sub_tit">Başlık</string>
    <string name="advert_detail_advert_extra_notes_sub_tit">Ek notlar</string>
    <string name="advert_detail_advert_progress">Tamamlanma oranı</string>
    <string name="advert_detail_advert_category">Kategori</string>
    <string name="advert_detail_go_detail">Detay</string>
    <string name="string_register">Hesabın yok mu? <font color='#FF3700B3'><u>Buraya tıklayarak hesap oluştur!</u></font></string>
    <string name="add_new_advert">Yeni bir ilan eklemek icin buraya tıklayın</string>
    <string name="advert_detail_approved"><u>Onaylanmış yardımlar</u></string>
    <string name="advert_detail_pending"><u>Onay bekleyen yardımlar</u></string>
    <string name="advert_contribution_required_title">İhtiyaç Listesi</string>
    <string name="view_contribution_add">Ekle</string>
    <string name="my_profile">Profilim</string>
    <string name="my_adverts">İlanlarım</string>
    <string name="category">Kategori</string>
    <string name="add_new_advert_btn">İlan Ekle</string>
    <string name="signout">Çıkış yap</string>
    <string name="contribution_approve">Onayla</string>
    <string name="warning_empty">Onaylanmayı bekleyen yardım bulunmamaktadır.</string>
    <string name="all">Hepsi</string>
    <string name="warning_help">İhtiyaçtan fazla miktarda yardım yapılamaz.</string>
    <string name="input_count">Adet girin: (Gerekli adet sayisi: %s)</string>
    <string name="input_count2">"Toplanan ihtiyaç adeti: %s"</string>
    <string name="contact">İletişim</string>
    <string name="advert_detail_finish">Yardım başarıyla toplandı</string>
    <string name="item_neccessary_waiting_approvement">Onay bekleniyor</string>
    <string name="new_advert_button_add">Ekle</string>
    <string name="messages">Mesajlarım</string>
</resources>