<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_main"
    app:startDestination="@id/mapFragment">


    <fragment
        android:id="@+id/mapFragment"
        android:name="com.sharefy.android.ui.fragment.map.MapFragment"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_mapFragment_to_addNewAdvertFragment"
            app:destination="@id/addNewAdvertFragment" />
        <action
            android:id="@+id/action_mapFragment_to_contributeFragment"
            app:destination="@id/contributeFragment" />
        <action
            android:id="@+id/action_mapFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_mapFragment_to_chatLobbyFragment"
            app:destination="@id/chatLobbyFragment" />
    </fragment>
    <fragment
        android:id="@+id/addNewAdvertFragment"
        android:name="com.sharefy.android.ui.fragment.add_new_advert.AddNewAdvertFragment"
        android:label="@string/add_new_advert_btn" >
        <argument
            android:name="latLng"
            app:argType="com.google.android.gms.maps.model.LatLng" />
        <action
            android:id="@+id/action_addNewAdvertFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/myAdvertsFragment"
        android:name="com.sharefy.android.ui.fragment.my_adverts.MyAdvertsFragment"
        android:label="@string/my_adverts" >
        <action
            android:id="@+id/action_myAdvertsFragment_to_contributeFragment"
            app:destination="@id/contributeFragment" />
    </fragment>
    <fragment
        android:id="@+id/contributeFragment"
        android:name="com.sharefy.android.ui.fragment.contribute.ContributeFragment"
        android:label="@string/advert_detail_go_detail" >
        <argument
            android:name="advert"
            app:argType="com.sharefy.android.model.Advert" />
        <action
            android:id="@+id/action_contributeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_contributeFragment_to_addNewAdvertFragment"
            app:destination="@id/addNewAdvertFragment" />
        <action
            android:id="@+id/action_contributeFragment_to_chatLobbyFragment"
            app:destination="@id/chatLobbyFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.sharefy.android.ui.fragment.profile.ProfileFragment"
        android:label="@string/my_profile" />
    <fragment
        android:id="@+id/chatLobbyFragment"
        android:name="com.sharefy.android.ui.fragment.chat_lobby.ChatLobbyFragment"
        android:label="@string/messages" >
        <action
            android:id="@+id/action_chatLobbyFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.sharefy.android.ui.fragment.chat.ChatFragment"
        android:label="@string/messages">
        <argument
            android:name="chatLobbyId"
            app:argType="string" />
    </fragment>
</navigation>