<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="contAd"
            type="com.sharefy.android.model.ContributeAdvert" />

        <variable
            name="listener"
            type="com.sharefy.android.ui.fragment.my_adverts.adapter.PendingContClickListener" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_margin="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_materialName"
                style="@style/TextAppearance.Sharefy.Subtitle3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{contAd.userId}"
                app:layout_constraintEnd_toStartOf="@+id/button_contribute"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="user name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_materialNameSubTit"
                style="@style/TextAppearance.Sharefy.Subtitle4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/item_necessary_item_sub1"
                app:layout_constraintStart_toStartOf="@+id/textView_materialName"
                app:layout_constraintTop_toBottomOf="@+id/textView_materialName" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_materialCount"
                style="@style/TextAppearance.Sharefy.Subtitle3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/button_contribute"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_materialNameSubTit"
                tools:text="Material count" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_materialCountSubTit"
                style="@style/TextAppearance.Sharefy.Subtitle4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/item_necessary_item_sub2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView_materialCount"
                app:layout_constraintTop_toBottomOf="@+id/textView_materialCount" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/button_contribute"
                style="@style/TextAppearance.Sharefy.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/contribution_approve"
                android:textColor="@color/leaf"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_add_circle_outline_24" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</layout>
